fixed 3d text overflow

--- a/src/styles/ColorMap.css
+++ b/src/styles/ColorMap.css
@@ -5,8 +5,8 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
-    background: rgba(200, 200, 220, 0.25);
-    box-shadow: 1px 1px 0 0 rgba(0, 0, 0, 0.25);
+    background: rgba(200, 200, 220, 0.33);
+    box-shadow: 1px 1px 0 0 rgba(0, 0, 0, 0.33);
     border-radius: 25px;
     margin: 10px;
     flex-flow: column wrap;
